[UI][FIX] Prevent text of currency selector (one known instance of this problem) from being hidden by the background color and box shadow. Thanks, Marc.

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3362,6 +3362,10 @@ div.form-group label.error {
 .tiki .chosen-container.chosen-container-active .chosen-choices .search-choice + .search-field input[type="text"] {
   display: inherit; }
 
+.tiki .chosen-container .chosen-single abbr {
+  background-color: transparent;
+  box-shadow: none; }
+
 .tiki .anythingSlider, .tiki .anythingWindow, .tiki .anythingBase, .tiki .anythingBase > .card {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
